# metamask

./: .dockerignore  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  main.py  project.env  pyproject.toml
.github/workflows/: build_deploy.yaml
metamask/: __init__.py  config.py  logger.py  metamask.py  schema.py  socket.py  utils.py
metamask/data/: gmee_abi_polygon.json
tests/: transaction.py
